@@ -1,14 +1,29 @@
-/******************************************************************************
- * jWebUnit project (http://jwebunit.sourceforge.net)                         *
- * Distributed open-source, see full license under LICENCE.txt                *
- ******************************************************************************/
+/**
+ * Copyright (c) 2010, JWebUnit team.
+ *
+ * This file is part of JWebUnit.
+ *
+ * JWebUnit is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * JWebUnit is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with JWebUnit.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+
 package net.sourceforge.jwebunit.tests;
 
 import junit.framework.Test;
 import junit.framework.TestSuite;
 import net.sourceforge.jwebunit.html.Cell;
 import net.sourceforge.jwebunit.html.Table;
-import net.sourceforge.jwebunit.locator.HtmlTableLocatorByName;
 import net.sourceforge.jwebunit.tests.util.JettySetup;
 
 /**
@@ -22,7 +37,7 @@ public class ExpectedTableAssertionsXHtmlTest extends JWebUnitAPITestCase {
 
     public void setUp() throws Exception {
         super.setUp();
-		getTestContext().setBaseUrl(HOST_PATH + "/ExpectedTableAssertionsTest");
+		setBaseUrl(HOST_PATH + "/ExpectedTableAssertionsTest");
 		beginAt("/TableAssertionsTestPageXHtml.html");
     }
 
@@ -46,7 +61,7 @@ public class ExpectedTableAssertionsXHtmlTest extends JWebUnitAPITestCase {
         cells[3][2]=new Cell("0.002",1,1);
         cells[3][3]=new Cell("43%",1,1);
         Table table = new Table(cells);
-        assertPass("assertTableEquals", new Object[]{new HtmlTableLocatorByName("myTable"), table});
+        assertPass("assertTableEquals", new Object[]{"myTable", table});
     }
 
     public void testAssertTableEqualsMissingRows() throws Throwable {
@@ -64,8 +79,8 @@ public class ExpectedTableAssertionsXHtmlTest extends JWebUnitAPITestCase {
         cells[2][2]=new Cell("0.003",1,1);
         cells[2][3]=new Cell("40%",1,1);
         Table table = new Table(cells);
-        assertPass("assertTableRowsEqual", new Object[]{new HtmlTableLocatorByName("myTable"), new Integer(0), table});
-        assertFail("assertTableEquals", new Object[]{new HtmlTableLocatorByName("myTable"), table});
+        assertPass("assertTableRowsEqual", new Object[]{"myTable", Integer.valueOf(0), table});
+        assertFail("assertTableEquals", new Object[]{"myTable", table});
     }
 
 }
